--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.guru.translate.translator.translation.learn.language"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 63
-        versionName '2.7'
+        versionCode 67
+        versionName '3.0'
     }
 
     buildTypes {
@@ -23,11 +23,18 @@ android {
             renderscriptDebuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            debuggable true
+            jniDebuggable false
+            renderscriptDebuggable false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 
     configurations {
         cleanedAnnotations
-        compile.exclude group: 'org.jetbrains' , module:'annotations'
+        compile.exclude group: 'org.jetbrains', module: 'annotations'
     }
 
     externalNativeBuild {
@@ -44,11 +51,6 @@ android {
     androidResources {
         noCompress 'dict'
     }
-
-//    buildFeatures {
-//        viewBinding = true
-//    }
-
 }
 
 dependencies {
@@ -58,7 +60,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1' // Replaces recyclerview:1.0.0 included by above dependency
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    // Replaces recyclerview:1.0.0 included by above dependency
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
@@ -100,10 +103,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
-//    implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
-//    implementation 'androidx.room:room-compiler:2.5.0'
+
+    implementation 'com.itextpdf:itextg:5.5.10'
+
 }
+
 repositories {
     mavenCentral()
 }
